--- a/templates/base.html
+++ b/templates/base.html
@@ -18,50 +18,42 @@
 
 
 	<!-- Google Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jersey+15&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
 
-    <!-- Vendors: CSS -->
-
-    <link rel="stylesheet" href="{% static 'vendors/feather/feather.css' %}">
-    <link rel="stylesheet" href="{% static 'vendors/ti-icons/css/themify-icons.css' %}">
-    <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
-
-
-    <link rel="stylesheet" href="{% static 'css/vendor_styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/components/navbar.css' %}">
 
     {% block links %} {% endblock links %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Leaflet CSS -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" /> -->
 
-    <!-- Leaflet Javascript -->
-    <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script> -->
 
     <title>{% block title %} home {% endblock title %}</title>
     <style>
-        .main-container{
+        .base-outline {
             display: flex;
-            width: 100%;
+            flex-direction: column;
+            min-height: 100vh;
+            background-color: red;
         }
-    .main-sidebar{
-        background-color: white;
-        border: 1px solid rgba(0, 0, 0, 0.199);
-        border-radius: 5px;
-        width: 17%;
-        padding: 5px;
-    }
 
-    .main-content{
-        width: 83%;
-        padding: 5px;
-    }
+        .main-container {
+            flex: 1;
+        }
 
+        .main-content {
+            padding-top: 100px;
+        }
+
+        footer {
+            margin-top: auto;
+        }
     </style>
 </head>
 
@@ -79,17 +71,12 @@
 
         <!-- Main Section -->
         <main class="main-container">
-            <!-- Sidebar -->
-            <section class="main-sidebar">
-                {% include './components/sidebar.html' %}
-            </section>
 
-            <section class="main-content">
-                {% block body %}
+            {% block body %}
         
         
-                {% endblock body %}
-            </section>
+            {% endblock body %}
+
         </main>
 
         <!-- Footer -->
@@ -98,14 +85,7 @@
         </footer>
 
 
-
-
-        <!-- JS -->
-        <script src="{% static 'vendors/js/vendor.bundle.base.js' %}"></script>
-        <script src="{% static 'vendors/chart.js/Chart.min.js' %}"></script>
-        <script src="{% static 'vendors/datatables.net/jquery.dataTables.js' %}"></script>
-        <script src="{% static 'vendors/datatables.net-bs4/dataTables.bootstrap4.js' %}"></script>
-
+        <!-- Scripts -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         
